[package]
name = "rustypi"
version = "0.1.0"
authors = ["maxtnuk <maxtnuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader_precompiled = "0.2.0"

[package.metadata.bootimage]
default-target = "kernel.json"
