[package]
name = "rustypi"
version = "0.1.0"
authors = ["maxtnuk <maxtnuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "rt"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader_precompiled = "0.2.0"
register = "0.3.3"
rt={ path= "rt", version="0.1.0"}
