[package]
name = "rustypi"
version = "0.1.0"
authors = ["maxtnuk <maxtnuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[dependencies]
